# rive

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .pylint.py  .style.yapf  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  TODO.md  rivet  rivetc.py  test.ri  v.mod
.github/: PULL_REQUEST_TEMPLATE
changelogs/: README.md
cmd/: README.md  project.json  project.ri  rivetc.v
compiler/: ast.py  checker.py  mod.v  parser.py  register.py  report.py  resolver.py  sym.py  token.py  type.py
doc/: 00_getting_started.md  01_code_structure.md  02_functions.md  03_statements.md
docs/: 00_getting_started.md  01_code_structure.md  02_functions.md  03_statements.md
examples/: factorial.ri  fizz_buzz.ri  for.ri  hanoi.ri  hello_world.ri  loops.ri  run_examples.py  run_samples.py  rune_printing.ri  runes.ri
include/: Common.hpp  Optional.hpp
ric/: ric  v.mod
rivetc/: __init__.py  __main__.py  compiler.py  parser.py  prefs.py  token.py  utils.py
samples/: factorial.ri  hanoi.ri  hello_world.ri  run_samples.py  rune_printing.ri
src/: Common.cpp  Prefs.fu  Utils.fu  __init__.py  ast.py  checker.py  colors.py  compiler.py  depgraph.py  lexer.py  main.cpp  main.v  parser.py  prefs.py  register.py  report.py  resolver.py  ric.fu  sym.py  token.py  tokens.py  type.py  utils.py
src-self-hosted/: main.ri
tests/: gen_b_out_files.py  gen_out_files.py  gen_out_files.vsh  run_all.py  run_all_tests.py  run_b_invalid_tests.py  run_examples.py  run_fail_tests.py  run_failing_tests.py  run_invalid_tests.py  (+5 more)
(+709 files in other folders)
